--- a/demo/res/values/strings.xml
+++ b/demo/res/values/strings.xml
@@ -17,7 +17,7 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="drawer_open">Open</string>
     <string name="drawer_close">Close</string>
-
+    <string name="nav_item_home">Home</string>
     <string name="nav_item_jobs">My Jobs</string>
     <string name="nav_item_instructions">How to Use</string>
     <string name="nav_item_ticket">Raise Ticket</string>
@@ -27,6 +27,7 @@
 
     <!-- navigation drawer item labels  -->
     <string-array name="nav_drawer_labels">
+        <item>@string/nav_item_home</item>
         <item>@string/nav_item_jobs</item>
         <item>@string/nav_item_instructions</item>
         <item>@string/nav_item_ticket</item>
@@ -35,9 +36,9 @@
         <item>@string/nav_item_support</item>
     </string-array>
 
-    <string name="title_messages">Messages</string>
-    <string name="title_friends">Friends</string>
-    <string name="title_home">Home</string>
+    <string name="title_jobs">My Jobs</string>
+    <string name="title_incidents">Raise Incident</string>
+    <string name="title_assets">Book Assets</string>
 
 
 </resources>
