--- a/demo/res/values/strings.xml
+++ b/demo/res/values/strings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">INFA</string>
+    <string name="app_name">AI ’InTel’ Com</string>
     <string name="input_text">Looking for...</string>
     <string name="button_send">Go!</string>
     <string name="remove">Remove</string>
